--- a/bootstrap-style/@bootstrap3.datagrid.latte
+++ b/bootstrap-style/@bootstrap3.datagrid.latte
@@ -13,18 +13,12 @@
 	{input $column->name class => "input-small"}
 {/redefine}
 
-{redefine row-edit-actions}
+{redefine row-actions-edit}
 	{input save class => "btn btn-primary btn-small"}
 	{input cancel class => "btn btn-default btn-small"}
 {/redefine}
 
-{if $control->getEditFormFactory()}
-	{var $rowActions = 'row-actions'}
-{else}
-	{var $rowActions = 'row-actions-do_not_render'}
-{/if}
-
-{redefine $rowActions}
+{redefine row-actions-edit-link}
 	<a href="{link edit! $primary}" data-datagrid-edit class="ajax btn btn-small btn-primary">Edit</a>
 {/redefine}
 
