--- a/Nextras/Datagrid/Datagrid.latte
+++ b/Nextras/Datagrid/Datagrid.latte
@@ -78,7 +78,7 @@
 {/define}
 
 {define row}
-	<tr n:snippet="rows-$primary" data-grid-primary="{$primary}">
+	<tr n:snippet="rows-$primary">
 		{include #row-inner}
 	</tr>
 {/define}
@@ -121,7 +121,7 @@
 	<td class="col-actions">
 		{if $editRow}
 			{formContainer edit}
-				{input $rowPrimaryKey}
+				{input $rowPrimaryKey class => 'grid-primary-value'}
 				{include #row-actions-edit _form => $_form, form => $form}
 			{/formContainer}
 		{else}
