--- a/bootstrap-style/@bootstrap3.extended-pagination.datagrid.latte
+++ b/bootstrap-style/@bootstrap3.extended-pagination.datagrid.latte
@@ -16,9 +16,9 @@
 ?>
 <ul class="pagination">
 {if $paginator->isFirst()}
-	<li class="disabled"><a>« Previous</a></li>
+	<li class="disabled"><a>« {$control->translate(Previous)}</a></li>
 {else}
-	<li><a href="{link paginate!, 'page' => $paginator->page - 1}" rel="prev" class="ajax">« Previous</a><li>
+	<li><a href="{link paginate!, 'page' => $paginator->page - 1}" rel="prev" class="ajax">« {$control->translate(Previous)}</a><li>
 {/if}
 
 {foreach $steps as $step}
@@ -31,9 +31,9 @@
 {/foreach}
 
 {if $paginator->isLast()}
-	<li class="disabled"><a >Next »</a></li>
+	<li class="disabled"><a >{$control->translate(Next)} »</a></li>
 {else}
-	<li><a href="{link paginate!, 'page' => $paginator->page + 1}" rel="next" class="ajax">Next »</a></li>
+	<li><a href="{link paginate!, 'page' => $paginator->page + 1}" rel="next" class="ajax">{$control->translate(Next)} »</a></li>
 {/if}
 </ul>
 {/redefine}
