--- a/bootstrap-style/bootstrap3.nextras.datagrid.css
+++ b/bootstrap-style/bootstrap3.nextras.datagrid.css
@@ -1,39 +1,31 @@
-.datagrid td,
-.datagrid th {
+.grid td,
+.grid th {
   border-color: #CACACA;
 }
-.datagrid .cols-actions {
+.grid .grid-cols-actions {
   text-align: center;
 }
-.datagrid .btn {
+.grid .btn {
   margin-right: 3px;
 }
-.datagrid thead .columns {
+.grid thead .grid-columns {
   background: #EEE;
 }
-.datagrid thead .filters {
+.grid thead .grid-filters {
   background: #EEE;
 }
-.datagrid thead .filters th {
+.grid thead .grid-filters th {
   border-top: 1px solid #E5E5E5;
 }
-.datagrid tbody > tr > td {
+.grid tbody > tr > td {
   vertical-align: middle;
 }
-.datagrid tfoot {
+.grid tfoot {
   background: #EEE;
 }
-.datagrid tfoot th {
+.grid tfoot th {
   text-align: center;
 }
-.datagrid tfoot .pagination {
+.grid tfoot .pagination {
   margin: 5px;
-}
-.datagrid tfoot .pagination > .active a,
-.datagrid tfoot .pagination > .active:hover a {
-  background: #FFF;
-  color: #333;
-}
-.datagrid select {
-  height: auto;
 }
