--- a/bootstrap-style/bootstrap3.nextras.datagrid.less
+++ b/bootstrap-style/bootstrap3.nextras.datagrid.less
@@ -1,18 +1,18 @@
-.datagrid {
+.grid {
 	td, th {
 		border-color: #CACACA;
 	}
-	.cols-actions {
+	.grid-cols-actions {
 		text-align: center;
 	}
 	.btn {
 		margin-right: 3px;
 	}
 	thead {
-		.columns {
+		.grid-columns {
 			background: #EEE;
 		}
-		.filters {
+		.grid-filters {
 			background: #EEE;
 			th {
 				border-top: 1px solid #E5E5E5;
@@ -31,15 +31,6 @@
 		}
 		.pagination {
 			margin: 5px;
-			> .active, > .active:hover {
-				a {
-					background: #FFF;
-					color: #333;
-				}
-			}
 		}
-	}
-	select {
-		height: auto;
 	}
 }
