--- a/bootstrap-style/@bootstrap3.datagrid.latte
+++ b/bootstrap-style/@bootstrap3.datagrid.latte
@@ -14,12 +14,12 @@
 {/redefine}
 
 {redefine row-actions-edit}
-	{input save class => "btn btn-primary btn-sm"}
-	{input cancel class => "btn btn-default btn-sm"}
+	{input save class => "btn btn-primary btn-xs"}
+	{input cancel class => "btn btn-default btn-xs"}
 {/redefine}
 
 {redefine row-actions-edit-link}
-	<a href="{link edit! $primary}" data-datagrid-edit class="ajax btn btn-primary btn-sm">{$control->translate(Edit)}</a>
+	<a href="{link edit! $primary}" data-datagrid-edit class="ajax btn btn-primary btn-xs">{$control->translate(Edit)}</a>
 {/redefine}
 
 {redefine pagination}
